Update to JDK24/JFX24